some text change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h1>HELLO, I'M</h1>
                     <h1 class="color-highlight">RAYHAN ABDULLHA</h1>
                     <p>I Am Rayhan Abdullah.I am a Full Stack Web Developer with experience of more than 4+ years with specializing in Web-Development & Designing.</p>
-                    <a class="btn"href="#">Hire Me</a>
+                    <a class="btn"href="#" target="_blank">Hire Me</a>
                 </div>
                 <div class="slider-img half-width">
                     <img src="images/protfolio1.png" alt="Protfolio img">
@@ -50,7 +50,7 @@
             <div class="about-content half-width">
                 <h2>About Me</h2>
                 <p>Whether you’re just starting in web development or have been building quality websites and content for years, you know that user experience is king when it comes to driving web traffic — and turning traffic into loyal customers. Your resume should be no different. You should be building your resume with the user experience in mind, and striving to create an engaging, informative document that employers can read quickly and effortlessly. Try our web developer resume template for Word as an example of how to craft a resume that really speaks to your audience.</p>
-                <a class="btn"href="#">Download CV</a>
+                <a class="btn"href="#" target="_blank">Download CV</a>
             </div>
         </div>
     </section>
@@ -83,25 +83,25 @@
         <div class="container">
             <h1 class="project-tittle">MY<span> SERVICES</span></h1>						
             <div class="single-service">
-                <img src="images/services/service2.png" alt="" />
+                <img src="images/services/service2.png" alt="Responsive Web disign" />
                 <h3>Responsive Web disign</h3>
                 <p>It is a long established fact that a reader will beed by readable
                 content of a page when looking at its these.</p>
             </div>
             <div class="single-service">
-                <img src="images/services/service3.png" alt="" />
+                <img src="images/services/service3.png" alt="Wordpress Development" />
                 <h3>Wordpress Development</h3>
                 <p>It is a long established fact that a reader will beed by readable
                 content of a page when looking at its these.</p>
             </div>
             <div class="single-service">
-                <img src="images/services/service1.png" alt="" />
+                <img src="images/services/service1.png" alt="Software Testing" />
                 <h3>Software Testing</h3>
                 <p>It is a long established fact that a reader will beed by readable
                 content of a page when looking at its these.</p>
             </div>
             <div class="single-service">
-                <img src="images/services/service4.png" alt="" />
+                <img src="images/services/service4.png" alt="product managment" />
                 <h3>Product Managment</h3>
                 <p>It is a long established fact that a reader will beed by readable
                 content of a page when looking at its these.</p>
@@ -113,15 +113,15 @@
         <div class="work-inquary-area">
             <h2>WORK INQUIRY</h2>
             <img src="images/work-inquary.png" alt="">
-            <a class="work-btn"href="#">Let's Chats</a>
+            <a class="work-btn"href="#" target="_blank">Let's Chats</a>
         </div>
         <div class="social-icon">
             <h4>STAY CONNECTED</h4>
             <h3>hello@design.com</h3>
             <ul>
-                <li class="s-icon"><a href="#"><img src="images/icons/image 6.png" alt=""></a></li>
-                <li class="s-icon"><a href="#"><img src="images/icons/image 7.png" alt=""></a></li>
-                <li class="s-icon"><a href="#"><img src="images/icons/image 5.png" alt=""></a></li>
+                <li class="s-icon"><a href="#"><img src="images/icons/image 6.png" alt="socil icon"></a></li>
+                <li class="s-icon"><a href="#"><img src="images/icons/image 7.png" alt="social icon"></a></li>
+                <li class="s-icon"><a href="#"><img src="images/icons/image 5.png" alt="social icon"></a></li>
             </ul>
         </div>
     </section>
